--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -24,6 +24,8 @@
     <input type="hidden" th:field="*{id}">
     <input type="hidden" th:field="*{age}">
     <input type="hidden" th:field="*{dateOfBirth}">
+    <input type="hidden" th:field="*{roles}">
+    <input type="hidden" th:field="*{password}">
     <input type="submit" value="Обновить пользователя">
 </form>
 
