--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,21 +1,79 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
+
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+
+    <title>User page</title>
 </head>
 <body>
 
-<h1>Пользователь</h1>
-<p>Имя: <span th:text="${user.getName()}"></span></p>
-<p>Фамилия: <span th:text="${user.getLastname()}"></span></p>
-<p>Возраст: <span th:text="${user.getAge()}"></span></p>
-<p>Роль: <span th:text="${user.getRoles()}"></span></p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+    <div class="container-fluid">
+        <h6 class="user-info" th:text=" 'Username: ' + ${user.name} + ' ' + 'Roles: ' + ${user.roles}"></h6>
+        <div class="mr-auto"></div>
+        <div class="ml-auto order-2">
+            <a class="navbar-brand text-dark" th:href="@{/logout}">Logout</a>
+        </div>
+    </div>
+</nav>
 
 
-<form th:action="@{/logout}" method="post">
-    <button type="submit">Выйти</button>
-</form>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-3 bg-white">
+            <div class="list-group">
+                <a class="list-group-item list-group-item-action active" aria-current="true">
+                    User
+                </a>
+            </div>
+        </div>
+        <div class="col-md-9 bg-light">
+            <div class="container-fluid align-content-start">
+                <h1 class="text-lg-start"> User information-page</h1>
 
+                <div class="border bg-light w-300">
+                    <h5 class="text-lg-start">About user</h5>
+                </div>
+                <div>
+                    <table class="table table-striped border ">
+                        <thead>
+                        <tr>
+                            <span class="border-top"> </span>
+                            <th scope="col">ID</th>
+                            <th scope="col">First Name</th>
+                            <th scope="col">Last Name</th>
+                            <th scope="col">Age</th>
+                            <th scope="col">Email</th>
+                            <th scope="col">Roles</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <td th:text="${user.id}"></td>
+                        <td th:text="${user.name}"></td>
+                        <td th:text="${user.lastname}"></td>
+                        <td th:text="${user.age}"></td>
+                        <td th:text="${user.email}"></td>
+                        <td th:text="${user.isAdmin() ? 'Admin, ' : ''} + ${user.isUser() ? 'User' : ''}"></td>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<footer class="container background-light">
+
+</footer>
+
+
+
+<script th:src="@{/js/bootstrap.min.js}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 </body>
 </html>
