--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <title>Admin page</title>
 </head>
-<body>
 
+<body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
     <div class="container-fluid">
-        <h6 class="user-info" th:text=" 'Username: ' + ${name} + ' ' + 'Roles: ' + ${roles}"></h6>
-        <div class="mr-auto"></div>
+
+        <div class="mr-auto">
+            <p class="user-info align-self-center" th:text=" 'Username: ' + ${name} + ' ' + 'Roles: ' + ${roles}"></p>
+        </div>
         <div class="ml-auto order-2">
             <a class="navbar-brand text-dark" th:href="@{/logout}">Logout</a>
         </div>
@@ -22,11 +24,11 @@
 
 <section id="pageContent">
     <div class="row">
-        <div class="col-md-3 bg-white">
+        <div class="col-md-3 bg-white d-grid gap-3">
             <div class="list-group p-3">
                 <a th:href="@{/people}" class="list-group-item list-group-item-action"
                    th:classappend="${#httpServletRequest.getRequestURI() == '/people'
-                   || #httpServletRequest.getRequestURI() == '/postAction' ? 'active' : ''}">Users
+                    || #httpServletRequest.getRequestURI() == '/postAction'? 'active' : ''}">Users
                     table</a>
                 <a th:href="@{/#}" class="list-group-item list-group-item-action"
                    th:classappend="${#httpServletRequest.getRequestURI() == '/new' ? 'active' : ''}">User</a>
@@ -36,72 +38,220 @@
             <div class="container-fluid align-content-start">
                 <h1 class="text-lg-start"> Admin panel</h1>
                 <nav>
-                    <ul class="nav nav-tabs">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" th:href="@{/people}">Users table</a>
+                    <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                        <li class="nav-item" role="presentation"
+                            th:classappend="${activeTab == 'tab2' ? 'active' : ''}">
+                            <button class="nav-link" id="pills-home-tab" data-bs-toggle="pill"
+                                    data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home"
+                                    aria-selected="true"
+                                    th:classappend="${activeTab == 'tab1' ? 'active show' : ''}"
+                            >Users table
+                            </button>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/user}">New user</a>
+                        <li class="nav-item" role="presentation"
+                            th:classappend="${activeTab == 'tab2' ? 'active' : ''}">
+                            <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill"
+                                    data-bs-target="#pills-profile" type="button" role="tab"
+                                    aria-controls="pills-profile" aria-selected="true"
+                                    th:classappend="${activeTab == 'tab2' ? 'active show' : ''}">New user
+                            </button>
                         </li>
                     </ul>
                 </nav>
-                <div class="border bg-light w-300">
-                    <h5 class="text-lg-start">All users</h5>
+
+                <div class="tab-content" id="pills-tabContent">
+                    <div class="tab-pane fade" id="pills-home" role="tabpanel"
+                         aria-labelledby="pills-home-tab"
+                         th:classappend="${activeTab == 'tab1' ? 'active show' : ''}">
+                        <div>
+                            <div class="border bg-light text-center">
+                                <h5 class="text-lg-start">All users</h5>
+                            </div>
+
+                            <table class="table table-striped border">
+                                <thead>
+                                <tr class="border">
+                                    <span class="border-top bg-white"> </span>
+                                    <th scope="col">ID</th>
+                                    <th scope="col">First Name</th>
+                                    <th scope="col">Last Name</th>
+                                    <th scope="col">Age</th>
+                                    <th scope="col">Email</th>
+                                    <th scope="col">Roles</th>
+                                    <th scope="col">Edit</th>
+                                    <th scope="col">Delete</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+
+                                <tr th:each="user : ${users}">
+                                    <td th:text="${user.id}"></td>
+                                    <td th:text="${user.name}"></td>
+                                    <td th:text="${user.lastname}"></td>
+                                    <td th:text="${user.age}"></td>
+                                    <td th:text="${user.email}"></td>
+
+                                    <td th:text="${user.isAdmin() ? 'Admin, ' : ''} + ${user.isUser() ? 'User' : ''}"></td>
+
+                                    <td>
+                                        <form id="edit-user" th:action="@{/user/{id}(id=${user.id})}">
+                                            <button type="button" class="btn btn-info" id="edit-button"
+                                                    data-bs-toggle="modal" data-bs-target="#userEditDialog"
+                                                    th:data-userId="${user.id}"> Edit
+                                            </button>
+                                        </form>
+
+                                    </td>
+
+                                    <td>
+                                        <form th:action="@{/delete}"  id="delete-form">
+                                            <button type="button" class="btn btn-danger" id="delete-button"
+                                                    data-bs-toggle="modal" data-bs-target="#userEditDialog"
+                                                    th:data-userId="${user.id}" th:data-action="delete">Delete
+                                            </button>
+                                        </form>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade bg-white" id="pills-profile" role="tabpanel"
+                         aria-labelledby="pills-profile-tab"
+                         th:classappend="${activeTab == 'tab2' ? 'active show' : ''}">
+                        <!-- Форма для создания нового пользователя -->
+                        <div class="border bg-light text-center">
+                            <h5 class="text-lg-start">Add new user</h5>
+                        </div>
+                        <form
+                                class="centered-elements border s"
+                                th:method="post"
+                                th:action="@{/postAction}"
+                                th:object="${formUser}">
+                            <div class="col-md-9">
+                                <label for="name" class="form-label centered-label"> First name </label>
+                                <input type="text" class="form-control" th:field="*{name}" id="name" required>
+                                <div style="color: red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Ошибка
+                                    имени
+                                </div>
+                            </div>
+
+                            <div class="col-md-9">
+                                <label for="lastname" class="form-label centered-label"> Last name </label>
+                                <input type="text" class="form-control" th:field="*{lastname}" id="lastname" required>
+                                <div style="color: red" th:if="${#fields.hasErrors('lastname')}"
+                                     th:errors="*{lastname}">Ошибка фамилии
+                                </div>
+                            </div>
+
+                            <div class="col-md-9">
+                                <label for="dateOfBirth" class="form-label centered-label "> Date of Birth </label>
+                                <input type="date" class="form-control text-lg-center" style="width: 100%"
+                                       th:field="*{dateOfBirth}" id="dateOfBirth" required>
+                                <div style="color: red" th:if="${#fields.hasErrors('dateOfBirth')}"
+                                     th:errors="*{dateOfBirth}"> Неверная дата
+                                </div>
+                            </div>
+
+                            <div class="col-md-9">
+                                <label for="email" class="form-label centered-label"> Email </label>
+                                <input type="text" class="form-control" th:field="*{email}" id="email">
+                                <div style="color: red" th:if="${#fields.hasErrors('email')}"
+                                     th:errors="*{email}">Ошибка почта
+                                </div>
+                            </div>
+
+                            <div class="col-md-9">
+                                <label for="password" class="form-label centered-label"> Password </label>
+                                <input type="text" class="form-control" th:field="*{password}" id="password">
+                                <div style="color: red" th:if="${#fields.hasErrors('password')}"
+                                     th:errors="*{password}"> Неверный пароль
+                                </div>
+                            </div>
+
+                            <div class="col-md-9">
+                                <label for="roles" class="form-label centered-label">Roles</label>
+                                <select class="form-select form-select-sm text-lg-center "
+                                        aria-label=".form-select-sm пример"
+                                        id="roles" name="roles" th:field="*{roles}" multiple>
+                                    <option value="2">User</option>
+                                    <option value="1">Admin</option>
+                                </select>
+                            </div>
+
+                            <div class="col-md-9 text-center">
+                                <button type="submit" class="btn btn-success">Add new user</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-                <div>
-                    <table class="table table-striped border ">
-                        <thead>
-                        <tr>
-                            <span class="border-top"> </span>
-                            <th scope="col">ID</th>
-                            <th scope="col">First Name</th>
-                            <th scope="col">Last Name</th>
-                            <th scope="col">Age</th>
-                            <th scope="col">Email</th>
-                            <th scope="col">Roles</th>
-                            <th scope="col">Edit</th>
-                            <th scope="col">Delete</th>
-                        </tr>
-                        </thead>
-                        <tbody>
+            </div>
+            <!-- Modal -->
+            <div class="modal fade" id="userEditDialog"
+                 aria-labelledby="userEditDialogLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="userEditDialogLabel">Edit user</h5>
+                        </div>
+                        <div class="modal-body">
+                            <form>
+                                <div class="form-group">
+                                    <label for="userId" class="col-form-label">ID</label>
+                                    <input type="text" class="form-control w-50" id="userId" readonly>
+                                </div>
+                                <div class="form-group">
+                                    <label for="user-name" class="col-form-label">User Firstname</label>
+                                    <input type="text" class="form-control" id="user-name">
+                                </div>
 
-                        <tr th:each="user : ${users}">
-                            <td th:text="${user.id}"></td>
-                            <td th:text="${user.name}"></td>
-                            <td th:text="${user.lastname}"></td>
-                            <td th:text="${user.age}"></td>
-                            <td th:text="${user.email}"></td>
+                                <div class="form-group">
+                                    <label for="user-lastname" class="col-form-label">User Lastname</label>
+                                    <input type="text" class="form-control" id="user-lastname">
+                                </div>
 
-                            <td>
-                            <td th:text="${user.isAdmin() ? 'Admin, ' : ''} + ${user.isUser() ? 'User' : ''}"></td>
-                            </td>
+                                <div>
+                                    <label for="user-dateOfBirth" class="col-form-label">Date of Birth</label>
+                                    <input type="date" class="form-control" id="user-dateOfBirth">
+                                </div>
 
-                            <td>
-                                <form th:action="@{/edit}" th:object="${user}" id="edit-form">
-                                    <button type="submit" class="btn btn-info" form="edit-form">Edit</button>
-                                </form>
-                            </td>
-                            <td>
-                                <form th:action="@{/delete}" th:object="${user}" id="delete-form">
-                                    <button type="submit" class="btn btn-danger" form="delete-form">Delete</button>
-                                </form>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
+
+                                <div class="form-group">
+                                    <label for="user-email" class="col-form-label">Email</label>
+                                    <input type="text" class="form-control" id="user-email">
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="user-password" class="col-form-label" id="user-password-label">Password</label>
+                                    <input type="password" class="form-control" id="user-password">
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="user-roles" class="col-form-label">Roles</label>
+                                    <select class="form-control" id="user-roles" multiple>
+                                        <option value="1" class="centered-elements">Admin</option>
+                                        <option value="2" class="centered-elements">User</option>
+                                    </select>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary" id="save-user-button">Save</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
 </section>
-
-
 <footer class="container background-light">
-
 </footer>
-
-<script th:src="@{/js/bootstrap.min.js}"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script th:src="@{../js/bootstrap.min.js}"></script>
+<script th:src="@{../js/script.js}"></script>
 </body>
+
 </html>
