ver.3 Front + add validator for REST controller

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -198,7 +198,7 @@
                             <form>
                                 <div class="form-group">
                                     <label for="userId" class="col-form-label">ID</label>
-                                    <input type="text" class="form-control w-50" id="userId" readonly>
+                                    <input type="text" class="form-control" id="userId" readonly>
                                 </div>
                                 <div class="form-group">
                                     <label for="user-name" class="col-form-label">User Firstname</label>
