--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -21,10 +21,11 @@
 </nav>
 
 
+
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-3 bg-white">
-            <div class="list-group">
+            <div class="list-group p-3">
                 <a class="list-group-item list-group-item-action active" aria-current="true">
                     User
                 </a>
